QInput/QResizeObserver on Firefox: fix spinner and object keyboard navigation
It looks like at least firefox adds tab navigation to <object>

close #2550

--- a/src/css/core/helpers.styl
+++ b/src/css/core/helpers.styl
@@ -44,7 +44,7 @@
   overflow hidden !important
 
 .q-no-input-spinner
-  -moz-appearance textfield
+  -moz-appearance textfield !important
   &::-webkit-outer-spin-button,
   &::-webkit-inner-spin-button
     -webkit-appearance none
